--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -2,12 +2,12 @@
 <hr />
 <div class="bg-gray-50">
     <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4">
-        <div>
+        <div class="flex flex-col gap-4">
             <div class="flex-shrink-0 flex items-center">
-                <h1 class="h-8 w-auto font-extrabold text-2xl">Shortly</h1>
+                <img class="block h-12 w-auto" src="/img/logo-secondary.svg" alt="Logo">
             </div>
             <h1 class="block text-sm text-gray-400 hover:text-gray-600 font-medium py-1">
-                For you and by you.
+                Simplify your links, amplify <br> your reach.
             </h1>
         </div>
         <div>
@@ -48,7 +48,7 @@
         </div>
     </div>
     <hr />
-    <div class="h-gutter py-2 sm:py-3">
+    <div class="h-gutter py-2 sm:py-3 mb-6">
         <p class="text-sm text-gray-400 hover:text-gray-600 font-medium">
             Copyright © 2022 Shortly. All rights reserved.
         </p>
