--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -24,33 +24,21 @@
             </div>
             <div class="flex-1 flex items-center sm:items-stretch justify-start">
                 <a href="/">
-                    <div class="flex-shrink-0 flex items-center">
-                        <img class="block lg:hidden h-8 w-auto"
-                            src="https://tailwindui.com/img/logos/workflow-mark-indigo-500.svg" alt="Workflow">
-                        <h1 class="sm:hidden lg:block h-8 w-auto font-extrabold text-2xl ml-2 sm:ml-auto">Shortly</h1>
-                    </div>
+                    <img class="block h-8 w-auto" src="/img/logo.svg" alt="Logo">
                 </a>
                 <div class="hidden sm:block sm:ml-6">
                     <div class="flex space-x-4">
-
-                        <a href="#"
-                            class="hover:text-blue-600 hover:underline px-3 py-2 rounded-md text-sm font-medium">Urls</a>
-
-                        <a href="#"
-                            class="hover:text-blue-600 hover:underline px-3 py-2 rounded-md text-sm font-medium">Pricing</a>
-
-                        <a href="#"
-                            class="hover:text-blue-600 hover:underline px-3 py-2 rounded-md text-sm font-medium">Blogs</a>
+                        <!-- <a href="#" class="px-2 py-2">Pricing</a> -->
                     </div>
                 </div>
             </div>
             <div
                 class="hidden sm:flex absolute inset-y-0 right-0 items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
                 <a href="/signin"
-                    class="border-2 hover:bg-blue-600 hover:text-white px-3 py-2 rounded-md text-sm font-medium mr-2"
+                    class="text-neutral-600 hover:text-neutral-800 px-3 py-2 rounded-md text-sm font-medium mr-2"
                     aria-current="signin">Sign In</a>
-                <a href="/signup" class="bg-blue-600 text-white px-3 py-2 rounded-md text-sm font-medium ml-2"
-                    aria-current="signup">Sign Up</a>
+                <a href="/signin" class="bg-neutral-800 text-white px-3 py-2 rounded-md text-sm font-medium ml-2"
+                    aria-current="signin">Get Started</a>
             </div>
         </div>
     </div>
@@ -66,12 +54,12 @@
 
             <a href="#" class="block px-3 py-2 rounded-md text-base font-medium">Pricing</a>
 
-            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium">Blogs</a>
-
-            <a href="/signin" class="hover:bg-blue-600 hover:text-white px-3 py-2 rounded-md text-base font-medium block"
+            <a href="/signin"
+                class="hover:bg-blue-600 hover:text-white px-3 py-2 rounded-md text-base font-medium block"
                 aria-current="signin">Sign In</a>
 
-            <a href="/signup" class="hover:bg-blue-600 hover:text-white px-3 py-2 rounded-md text-base font-medium block"
+            <a href="/signup"
+                class="hover:bg-blue-600 hover:text-white px-3 py-2 rounded-md text-base font-medium block"
                 aria-current="signup">Sign Up</a>
 
         </div>
