--- a/views/components/signup.ejs
+++ b/views/components/signup.ejs
@@ -1,6 +1,6 @@
 <!-- signup -->
-<div class="min-h-full flex items-center justify-center py-8 px-4 sm:px-6 lg:px-8 bg-hero-pattern bg-center bg-cover">
-    <div class="max-w-sm w-full space-y-6 px-6 sm:px-6 lg:px-8 py-8 bg-gray-50 rounded-md shadow">
+<div class="min-h-full flex items-center justify-center py-8 px-4 sm:px-6 lg:px-8 polka-pattern bg-center bg-cover">
+    <div class="max-w-sm w-full space-y-6 px-6 sm:px-6 lg:px-8 py-8 bg-neutral-50">
         <div>
             <h2 class="text-center text-3xl font-extrabold text-gray-900">
                 Create account
@@ -67,26 +67,21 @@
             </div>
         </form>
         <div class="relative">
-            <hr class="border-b bg-gray-300 border-gray-100">
+            <hr class="border-b bg-neutral-300 border-neutral-300">
             <span>
                 <h1
                     class="font-semibold text-gray-600 text-sm px-2 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white">
-                    Or continue with</h1>
+                    or</h1>
             </span>
         </div>
         <!-- social logins -->
-        <div class="grid grid-cols-3 gap-2">
-            <a href="/auth/facebook">
-                <button class="border-2 rounded-md w-full py-2 px-3 group hover:bg-stone-600"><i
-                        class="fab fa-facebook text-lg text-gray-600 group-hover:text-white"></i></button>
-            </a>
+        <div class="">
             <a href="/auth/google">
-                <button class="border-2 rounded-md w-full py-2 px-3 group hover:bg-stone-600"><i
-                        class="fab fa-google text-lg text-gray-600 group-hover:text-white"></i></button>
-            </a>
-            <a href="/auth/twitter">
-                <button class="border-2 rounded-md w-full py-2 px-3 group hover:bg-stone-600"><i
-                        class="fab fa-twitter text-lg text-gray-600 group-hover:text-white"></i></button>
+                <button class="border-2 rounded-md w-full py-2 px-3 group hover:bg-stone-600">
+                    <i class="fab fa-google text-sm text-gray-600 group-hover:text-white px-1"></i>
+                    <span class="font-medium text-sm text-neutral-600 group-hover:text-white px-1">Continue with
+                        Google</span>
+                </button>
             </a>
         </div>
     </div>
