--- a/public/css/output.css
+++ b/public/css/output.css
@@ -761,6 +761,10 @@ select{
   margin-left: 0.5rem;
 }
 
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
 .mt-8{
   margin-top: 2rem;
 }
@@ -797,6 +801,10 @@ select{
   height: 100vh;
 }
 
+.h-8{
+  height: 2rem;
+}
+
 .h-10{
   height: 2.5rem;
 }
@@ -813,8 +821,8 @@ select{
   height: 1.25rem;
 }
 
-.h-8{
-  height: 2rem;
+.h-12{
+  height: 3rem;
 }
 
 .h-16{
@@ -825,14 +833,6 @@ select{
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-}
-
-.h-12{
-  height: 3rem;
-}
-
-.h-11{
-  height: 2.75rem;
 }
 
 .max-h-\[calc\(100vh-64px\)\]{
@@ -859,6 +859,10 @@ select{
   width: 100%;
 }
 
+.w-auto{
+  width: auto;
+}
+
 .w-10{
   width: 2.5rem;
 }
@@ -871,40 +875,14 @@ select{
   width: 1rem;
 }
 
-.w-fit{
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
 .w-5{
   width: 1.25rem;
 }
 
-.w-auto{
-  width: auto;
-}
-
-.w-12{
-  width: 3rem;
-}
-
-.w-11{
-  width: 2.75rem;
-}
-
-.w-16{
-  width: 4rem;
-}
-
-.min-w-fit{
-  min-width: -webkit-fit-content;
-  min-width: -moz-fit-content;
-  min-width: fit-content;
-}
-
-.min-w-full{
-  min-width: 100%;
+.w-fit{
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .max-w-7xl{
@@ -913,16 +891,6 @@ select{
 
 .max-w-sm{
   max-width: 24rem;
-}
-
-.max-w-fit{
-  max-width: -webkit-fit-content;
-  max-width: -moz-fit-content;
-  max-width: fit-content;
-}
-
-.max-w-full{
-  max-width: 100%;
 }
 
 .flex-1{
@@ -995,10 +963,6 @@ select{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
 .flex-col{
   flex-direction: column;
 }
@@ -1029,6 +993,10 @@ select{
 
 .gap-1{
   gap: 0.25rem;
+}
+
+.gap-4{
+  gap: 1rem;
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]){
@@ -1102,32 +1070,8 @@ select{
   border-width: 0px;
 }
 
-.border-4{
-  border-width: 4px;
-}
-
-.border-8{
-  border-width: 8px;
-}
-
 .border-b{
   border-bottom-width: 1px;
-}
-
-.border-dashed{
-  border-style: dashed;
-}
-
-.border-dotted{
-  border-style: dotted;
-}
-
-.border-double{
-  border-style: double;
-}
-
-.border-none{
-  border-style: none;
 }
 
 .border-transparent{
@@ -1159,14 +1103,14 @@ select{
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
-.border-gray-100{
+.border-neutral-200{
   --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
+  border-color: rgb(229 229 229 / var(--tw-border-opacity));
 }
 
-.border-indigo-600{
+.border-neutral-300{
   --tw-border-opacity: 1;
-  border-color: rgb(79 70 229 / var(--tw-border-opacity));
+  border-color: rgb(212 212 212 / var(--tw-border-opacity));
 }
 
 .bg-indigo-600{
@@ -1194,6 +1138,11 @@ select{
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
+.bg-gray-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
 .bg-stone-300{
   --tw-bg-opacity: 1;
   background-color: rgb(214 211 209 / var(--tw-bg-opacity));
@@ -1209,14 +1158,14 @@ select{
   background-color: rgb(245 245 244 / var(--tw-bg-opacity));
 }
 
-.bg-blue-600{
+.bg-neutral-800{
   --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+  background-color: rgb(38 38 38 / var(--tw-bg-opacity));
 }
 
-.bg-slate-50{
+.bg-neutral-50{
   --tw-bg-opacity: 1;
-  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+  background-color: rgb(250 250 250 / var(--tw-bg-opacity));
 }
 
 .bg-emerald-600{
@@ -1224,9 +1173,9 @@ select{
   background-color: rgb(5 150 105 / var(--tw-bg-opacity));
 }
 
-.bg-gray-300{
+.bg-neutral-300{
   --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+  background-color: rgb(212 212 212 / var(--tw-bg-opacity));
 }
 
 .bg-blue-700{
@@ -1234,17 +1183,8 @@ select{
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
-.bg-gray-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
 .bg-profile-avtar{
   background-image: url('/img/profile.jpg');
-}
-
-.bg-hero-pattern{
-  background-image: url('/img/login-bg.jpg');
 }
 
 .bg-cover{
@@ -1334,6 +1274,11 @@ select{
   padding-bottom: 2rem;
 }
 
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .pl-4{
   padding-left: 1rem;
 }
@@ -1421,11 +1366,6 @@ select{
   line-height: 2.25rem;
 }
 
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .font-medium{
   font-weight: 500;
 }
@@ -1464,6 +1404,16 @@ select{
   color: rgb(79 70 229 / var(--tw-text-opacity));
 }
 
+.text-blue-600{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.text-green-600{
+  --tw-text-opacity: 1;
+  color: rgb(22 163 74 / var(--tw-text-opacity));
+}
+
 .text-gray-600{
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
@@ -1489,14 +1439,14 @@ select{
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.text-green-600{
-  --tw-text-opacity: 1;
-  color: rgb(22 163 74 / var(--tw-text-opacity));
-}
-
 .text-black{
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-neutral-600{
+  --tw-text-opacity: 1;
+  color: rgb(82 82 82 / var(--tw-text-opacity));
 }
 
 .text-violet-600{
@@ -1509,6 +1459,11 @@ select{
   color: rgb(219 39 119 / var(--tw-text-opacity));
 }
 
+.text-neutral-500{
+  --tw-text-opacity: 1;
+  color: rgb(115 115 115 / var(--tw-text-opacity));
+}
+
 .text-indigo-400{
   --tw-text-opacity: 1;
   color: rgb(129 140 248 / var(--tw-text-opacity));
@@ -1517,11 +1472,6 @@ select{
 .text-indigo-500{
   --tw-text-opacity: 1;
   color: rgb(99 102 241 / var(--tw-text-opacity));
-}
-
-.text-blue-600{
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
 .opacity-75{
@@ -1615,24 +1565,14 @@ select{
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.placeholder\:text-indigo-400::-moz-placeholder{
+.placeholder\:text-neutral-400::-moz-placeholder{
   --tw-text-opacity: 1;
-  color: rgb(129 140 248 / var(--tw-text-opacity));
+  color: rgb(163 163 163 / var(--tw-text-opacity));
 }
 
-.placeholder\:text-indigo-400::placeholder{
+.placeholder\:text-neutral-400::placeholder{
   --tw-text-opacity: 1;
-  color: rgb(129 140 248 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-indigo-600::-moz-placeholder{
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-indigo-600::placeholder{
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity));
+  color: rgb(163 163 163 / var(--tw-text-opacity));
 }
 
 .hover\:border-b-2:hover{
@@ -1668,11 +1608,6 @@ select{
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-indigo-100:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(224 231 255 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-indigo-700:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(67 56 202 / var(--tw-bg-opacity));
@@ -1683,39 +1618,9 @@ select{
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-red-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-cyan-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(8 145 178 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-400:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-stone-800:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(41 37 36 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-stone-600:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(87 83 78 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-100:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .hover\:text-gray-500:hover{
@@ -1733,9 +1638,9 @@ select{
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.hover\:text-blue-600:hover{
+.hover\:text-neutral-800:hover{
   --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
+  color: rgb(38 38 38 / var(--tw-text-opacity));
 }
 
 .hover\:text-indigo-500:hover{
@@ -1743,19 +1648,14 @@ select{
   color: rgb(99 102 241 / var(--tw-text-opacity));
 }
 
-.hover\:underline:hover{
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
+.focus\:border-neutral-300:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(212 212 212 / var(--tw-border-opacity));
 }
 
 .focus\:border-indigo-500:focus{
   --tw-border-opacity: 1;
   border-color: rgb(99 102 241 / var(--tw-border-opacity));
-}
-
-.focus\:bg-gray-200:focus{
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .focus\:text-white:focus{
@@ -1788,9 +1688,9 @@ select{
   --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
 }
 
-.focus\:ring-indigo-50:focus{
+.focus\:ring-neutral-50:focus{
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(238 242 255 / var(--tw-ring-opacity));
+  --tw-ring-color: rgb(250 250 250 / var(--tw-ring-opacity));
 }
 
 .focus\:ring-offset-2:focus{
@@ -1846,10 +1746,6 @@ select{
 
   .sm\:-mr-2{
     margin-right: -0.5rem;
-  }
-
-  .sm\:ml-auto{
-    margin-left: auto;
   }
 
   .sm\:ml-6{
@@ -1945,14 +1841,6 @@ select{
 
   .lg\:mt-0{
     margin-top: 0px;
-  }
-
-  .lg\:block{
-    display: block;
-  }
-
-  .lg\:hidden{
-    display: none;
   }
 
   .lg\:flex-shrink-0{
